// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cannot leave blank expressions in for loops 1`] = `"Line 2: For statement cannot have empty init expression."`;

exports[`Cannot leave blank expressions in for loops 2`] = `"Line 2: For statement cannot have empty test expression."`;

exports[`Cannot leave blank expressions in for loops 3`] = `"Line 2: For statement cannot have empty update expression."`;

exports[`Cannot leave blank expressions in for loops 4`] = `"Line 2: For statement cannot have empty init,test,update expressions."`;

exports[`Cannot overwrite loop variables within a block 1`] = `"Line 5: Cannot assign new value to constant x"`;

exports[`const uses block scoping instead of function scoping 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`for loop \`let\` variables are copied into the block scope 1`] = `
Object {
  "status": "finished",
  "value": 1,
}
`;

exports[`for loops use block scoping instead of function scoping 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`let uses block scoping instead of function scoping 1`] = `
Object {
  "status": "finished",



  "value": true,

}
`;

exports[`standalone block statements 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;

exports[`while loops use block scoping instead of function scoping 1`] = `
Object {
  "status": "finished",
  "value": true,
}
`;
